Partie Organisation Projet du Rapport

--- a/Rapport/Master.tex
+++ b/Rapport/Master.tex
@@ -9,7 +9,7 @@
 
 \author{Thomas Bianchini - Nathanael Couret - Antoine Valette - Clement Taboulot}
 \title{Rapport: \linebreak Projet Pacman}
-\date{\today}
+\date{2 mars 2015}
 
 \begin{document}
 
