Ajout de la partie MVC du rapport

--- a/Rapport/Master.tex
+++ b/Rapport/Master.tex
@@ -7,6 +7,9 @@
 
 \usepackage{fullpage}
 
+\graphicspath{{pics/}}
+
+
 \author{Thomas Bianchini - Nathanael Couret - Antoine Valette - Clement Taboulot}
 \title{Rapport: \linebreak Projet Pacman}
 \date{2 mars 2015}
