petit javadoc fix + dat op rapport maj

--- a/Rapport/sections/division_travail.tex
+++ b/Rapport/sections/division_travail.tex
@@ -2,11 +2,11 @@
 
 Étant un groupe de quatre collaborateurs, nous avons commencé par nous organiser afin que chacun connaisse son rôle dans le but de faire avancer le projet correctement. \\
 Tout d'abord, la base de notre travail repose sur la possibilité pour chacun des membres de disposer des ressources nécessaires afin d'avancer ses tâches. Pour cela, nous avons mis en place un repository git (hébergé sur GitHub). Ce choix se justifie car la mise en place est simple et l'équipe avait les connaissances suffisantes d'utilisation. \\
-Ensuite nous avons décidé de réfléchir tous ensemble sur le sujet afin d'ébaucher une architecture pour notre application qui sera expliquer en détail dans la partie structure de l'application. Puis nous nous sommes mis d'accord sur les tâches de chacun :
+Ensuite nous avons décidé de réfléchir tous ensemble sur le sujet afin d'ébaucher une architecture pour notre application qui sera expliquée en détail dans la partie structure de l'application. Puis nous nous sommes mis d'accord sur les tâches de chacun :
 \begin{itemize}
 	\item Antoine : algorithme minimax
 	\item Clement : algorithme du plus court chemin
-	\item Nathanël : deplacement aleatoire, gestion des cartes pourries, gestion des victoires/défaites IHM
+	\item Nathanël : deplacement aleatoire, gestion des cartes pourries, gestion des victoires/défaites
 	\item Thomas : parser de fichier de map, mis en place de la structure, gestion IHM
 	\item Clement - Thomas : deplacement des fantomes
 	\item Groupe : code review, javadoc, rapport
