--- a/Rapport/sections/structure_application.tex
+++ b/Rapport/sections/structure_application.tex
@@ -1,3 +1,11 @@
 \section{Structure de l'application}
 
 \input{sections/subsectionsStruc/MVC}
+
+\input{sections/subsectionsStruc/Personnage}
+
+\input{sections/subsectionsStruc/Strategy}
+
+\input{sections/subsectionsStruc/Map}
+
+Nous avons essayé au travers de cette application de mettre en place des mécanismes de Progammation Orientée Objet tels que les designs patterns (MVC, Strategy), l'héritage... D'autre part, nous avons tenté de découper le code afin que le travail en équipe soit facilité dans le sens où la compréhension de chaque fonction ou classe soit la plus claire et plus rapide pour chaque membre du groupe.
