--- a/Rapport/Master.tex
+++ b/Rapport/Master.tex
@@ -38,7 +38,7 @@
 
 
 \author{Thomas Bianchini - Nathanael Couret - Antoine Valette - Clement Taboulot}
-\title{Rapport: \linebreak Projet Pacman}
+\title{Projet Pacman}
 \date{2 mars 2015}
 
 \begin{document}
