--- a/Rapport/sections/division_travail.tex
+++ b/Rapport/sections/division_travail.tex
@@ -6,7 +6,7 @@ Ensuite nous avons décidé de réfléchir tous ensemble sur le sujet afin d'éb
 \begin{itemize}
 	\item Antoine : algorithme minimax
 	\item Clement : algorithme du plus court chemin
-	\item Nathanël : deplacement aleatoire, gestion des cartes pourries, gestion des victoires/défaites
+	\item Nathanël : deplacement aleatoire, gestion des cartes invalides, gestion des victoires/défaites
 	\item Thomas : parser de fichier de map, mis en place de la structure, gestion IHM
 	\item Clement - Thomas : deplacement des fantomes
 	\item Groupe : code review, javadoc, rapport
