partie rapport nath
conditions victoire, algo random, check map

--- a/Rapport/Master.tex
+++ b/Rapport/Master.tex
@@ -59,7 +59,10 @@
 %Section 2 : Structure de l'application
 \input{sections/structure_application}
 
-%Section 3 : Les algorithmes
+% Section 3 : conditions de victoire
+\input{sections/victoire}
+
+%Section 4 : Les algorithmes
 \input{sections/algos}
 
 \end{document}
