--- a/Rapport/sections/subsectionsAlgos/random.tex
+++ b/Rapport/sections/subsectionsAlgos/random.tex
@@ -1,1 +1,3 @@
 \subsection{Déplacements aléatoires}
+
+L'algorithme de déplacement alétoire récupère tout d'abord pour chaque personnage sa position actuelle sur le tableau. Ensuite, il récupère les cases voisines (droite/gauche et haut/bas) puis en sélectionne une au hasard. Si la case sélectionnée est un mur il rétière la sélection sinon il retourne la case sélectionnée pour que le programme effectue le déplacement.
